--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.anchormen</groupId>
 	<artifactId>sql4es</artifactId>
-	<version>0.9.2.4</version>
+	<version>0.9.2.5</version>
 	<packaging>jar</packaging>
 	<name>sql-4-elasticsearch</name>
 	<url>https://github.com/Anchormen/sql4es</url>
@@ -26,8 +26,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<elasticsearch.version>2.4.3</elasticsearch.version>
-		<lucene.version>5.5.2</lucene.version>
+		<elasticsearch.version>5.5.0</elasticsearch.version>
+		<lucene.version>6.6.0</lucene.version>
 	</properties>
 
 	<repositories>
@@ -50,13 +50,13 @@
 			<version>0.128</version>
 		</dependency>
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
+			<groupId>com.strapdata.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>${elasticsearch.version}</version>
 		</dependency>
 		 <dependency>
-	         <groupId>org.elasticsearch.plugin</groupId>
-	         <artifactId>shield</artifactId>
+	         <groupId>com.strapdata.elasticsearch.plugin</groupId>
+	         <artifactId>ssl-transport-client</artifactId>
 	         <version>${elasticsearch.version}</version>
      	 </dependency>
 		<dependency>
@@ -93,10 +93,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
+			<groupId>com.strapdata.elasticsearch.test</groupId>
+			<artifactId>framework</artifactId>
 			<version>${elasticsearch.version}</version>
-			<type>test-jar</type>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
